--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-.DS_Store
+/db-data
 
 # Go workspace file
 go.work
