--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -3,13 +3,10 @@ version: '3.8'
 services:
   database:
     image: postgres:15.4
-    environment:
-      POSTGRES_DB: legends_db
-      POSTGRES_USER: usrlegends
-      POSTGRES_PASSWORD: postgres
-      PGDATA: /var/lib/postgresql/data/pgdata
+    env_file:
+      - ./db.env
     volumes:
       - ./database.sql:/docker-entrypoint-initdb.d/database.sql
-      - ./db-data:/var/lib/postgresql/data
+      - ../db-data:/var/lib/postgresql/data
     ports:
       - 5433:5432
