--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-/db-data
+# Dependency directories (remove the comment below to include it)
 .DS_Store
+/db-data
 *.env
 
 # Go workspace file
