--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - ./db.env
     volumes:
       - ./database.sql:/docker-entrypoint-initdb.d/database.sql
-      - /var/lib/postgresql/data:/var/lib/postgresql/data
+      - ./db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
