--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -22,6 +22,28 @@ services:
       context: ../
       dockerfile: ./migrations/Dockerfile
 
+  minio:
+    container_name: minio_container
+    hostname: minio
+    image: minio/minio:latest
+    command: server --console-address ":9001" /data
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    env_file:
+      - minio.env
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:9000/minio/health/live"
+        ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
   api:
     container_name: "${API_DN}"
     depends_on:
