--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -50,6 +50,18 @@ services:
       timeout: 20s
       retries: 3
 
+  minio-migrate:
+    container_name: migrate_minio
+    depends_on:
+      - minio
+    build:
+      context: ../
+      dockerfile: ./pkg/minio-migrator/Dockerfile
+    env_file:
+      - minio.env
+    networks:
+      - minio
+
   api:
     container_name: "${API_DN}"
     depends_on:
