--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -31,9 +31,9 @@ services:
     hostname: minio
     image: minio/minio:latest
     command: server --console-address ":9001" /data
-    #ports:
-    #  - "9000:9000"
-    #  - "9001:9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
     networks:
       - internal-back
     env_file:
